[tool.poetry]
name = "davinciresolve-PsdCharacterExporter"
version = "0.1.0"
description = "davinciresolve-PsdCharacterExporter"
authors = ["NUROKU"]
license = "GPL 3.0"
readme = "README.md"
packages = [{include = "davinciresolve-PsdCharacterExporter"}]

[tool.poetry.dependencies]
python = "^3.9"
psd-tools = "^1.9.23"
ttkwidgets = "^0.13.0"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
